# wexin-read-mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
src/: __init__.py  scraper.py
src/weixin_reader/: __init__.py  __main__.py  parser.py  scraper.py  server.py
